--- a/Aula 5/index.html
+++ b/Aula 5/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src= "atv06"></script> </script>
+    <script src= "array.js"></script> </script>
 </body>
 </html>
